# c-kernel-learning

./: .gitignore  .operation_git.md.swp  README.md  operation_git.md
cplusplus/: .clang-format  .clangd  compile_flags.txt
cplusplus/basement/: compile_commands.json
cplusplus/basement/base_code/inc/: const_test.h  math_utils.h
cplusplus/basement/base_code/src/: .gdb_history  CMakeLists.txt  a.out  const_test.cpp  coroutine_demo  coroutine_demo.cpp  hello.c  math_main.cpp  math_utils.cpp  namespace_test  namespace_test.cpp  struct_demo  struct_demo.cpp  struct_test  struct_test.cpp  test  test.cpp  type_test  type_test.cpp
cplusplus/basement/base_code/src/base_reference_stream/: CMakeLists.txt  Makefile  data.txt  ref_demo  ref_demo.cpp  ref_demo.h  singleton  singleton.cpp  singleton.h  stream_demo  stream_demo.cpp  stream_demo.h
cplusplus/basement/base_code/src/base_reference_stream/test/: main  main.cpp  main.i  main.s
cplusplus/basement/base_code/src/base_template/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  logger  logger.cpp  logger.h  sfinae_demo  sfinae_demo.cpp  sfinae_demo.h  template.cpp  template.h  template_demo  test_printval  test_printval.cpp
cplusplus/basement/base_code/src/task/task_management_sys/: CMakeLists.txt  README.md  command.cpp  command.h  command_registry.cpp  command_registry.h  log.txt  logger.cpp  logger.h  main.cpp  task.cpp  task.h  task_manager  task_manager.cpp  task_manager.h  tasks.txt
cplusplus/basement/base_doc/: base1.md  base2.md  base3.md  base4.md  base5.md  base_auto_stuct.md  base_class.md  base_const.md  base_func.md  base_mem.md  base_reference.md  base_singleton.md  base_stl.md  base_stream.md  base_template.md
cplusplus/basement/just_demo/: main  readme.md
cplusplus/basement/just_demo/include/: test.h
cplusplus/basement/just_demo/src/: bool_test  bool_test.cpp  main.cpp  test.cpp
cplusplus/concurrent/code/: c_tasks_queue  c_tasks_queue.c
cplusplus/concurrent/code/base_thread/: thread_base_demo  thread_base_demo.cpp
cplusplus/concurrent/doc/: base_thread.md
cplusplus/design_patterns/code/factor/: main.cpp  operation.hpp  operation_factory.hpp
cplusplus/design_patterns/code/factory_method/: db_connection.hpp  db_factory.hpp
cplusplus/design_patterns/docs/: base_factory.md  base_principles.md  base_strategy.md
cplusplus/effective_c++/chapter1/item2/: const.md  test_const_and_enum  test_const_and_enum.cpp  test_copy  test_copy.cpp  test_explicit  test_explicit.cpp  test_template  test_template.cpp
cplusplus/net_program/code/cpp_net/base_logic_layer/test/: CMakeLists.txt  chat_mgr.cpp  chat_mgr.hpp  config.h  logic_system.cpp  logic_system.hpp  login_mgr.cpp  login_mgr.hpp  main.cpp  message.hpp  network_server.cpp  network_server.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp  singleton.hpp
cplusplus/net_program/code/cpp_net/base_protobuf/: CMakeLists.template  CMakeLists.txt  build.sh  chat.pb.cc  chat.pb.h  chat.proto  echo_client.cpp  echo_server.cpp  hello_protobuf.cpp
cplusplus/net_program/code/cpp_net/base_protobuf/test/: person.pb.cc  person.pb.h  person.proto  test.cpp
cplusplus/net_program/code/cpp_net/base_protobuf/test/.reasonix/truncated-results/: 1783602033351-5b2bbb11-run_command.txt
cplusplus/net_program/docs/: REASONIX.md  base_asio.md  base_asio_async.md  base_byteorder.md  base_io_multiplexing.md  base_jsoncpp.md  base_logic_layer.md  base_multi_process.md  base_poll.md  base_protobuf.md  base_tcp_msg.md
csapp/chapter10/: dirent_test  dirent_test.c  fgetc_test  fgetc_test.c  foo.txt  hex2dd  hex2dd.c  inet_test  inet_test.c  sharing_test  sharing_test.c  stat_test  stat_test.c  test.txt
csapp/chapter11/: echo_server  echo_server.c  printip_test  printip_test.c
csapp/chapter12/: bad_client  bad_client.c  echoservers  select.c  select_server_demo  select_server_demo.c
csapp/chapter12/threads/: echoservert_std_demo  echoservert_std_demo.c  mutex_cnt_demo  mutex_cnt_demo.c  p_and_c_demo  p_and_c_demo.c  race_demo  race_demo.c  threadHello_demo  threadHello_demo.c
csapp/chapter9/: .vuln_op.md.swp  hello  hello.c  payload  vuln  vuln.c  vuln_op.md
csapp/chapter9/malloc/: flsp  flsp.c  memlib.c  memlib.h  mm.c  mm.h  test_error  test_error.c  test_ptmalloc  test_ptmalloc.c
gdb/: based1.md  based2.md  chapter1.md  chapter3.md  chapter4.md  chapter5.md
gdb/src/: .gdb_history  challenge  challenge.c  challenge_log.md  hello_test  hello_test.c  hello_test.i  hello_test.s  overflow  overflow.c  payload  test  test.c
lll/code/part2/: .gdb_history  a.c  ab  b.c  check_thread.c  efl_example.c  elf_example  hello  hello.c  hello.i  hello.ll  hello.s  my_print.c  my_print.h  my_print.i  my_print.s  special_symbol  special_symbol.c  test.c  test_single  testc  testcpp  ting_hello_world  ting_hello_world.c  ting_hello_world.lds
lll/doc/: elf_main.o.md  part2-2.md  part2.md
(+155 files in other folders)
